# awedio_esp32

./: .gitignore  Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs
